	  it's necessary, i.e, when COLOR_SYNTAX is set. (DLR)
	- Minor cosmetic tweaks to the code involving direction keys.
	  NANO_UP_KEY and NANO_DOWN_KEY are now NANO_PREVLINE_KEY and
	  NANO_NEXTLINE_KEY, and the help messages for them have been
	  changed accordingly.  Also remove extraneous references to
	  NANO_DOWN_KEY in the search history shortcut entries. (DLR)
- nano.c:
  main()
	- Move the call to raw() on systems that don't define
	  _POSIX_VDISABLE outside the main input/output loop, as it
	  doesn't need to be called every time through the loop. (DLR)
- search.c:
  do_replace_loop()
	- Fix segfault when doing a regex replace of a string that
	  matches inside a line (e.g. replace the "b" in "abc" with
	  anything). (David Benbennick)
- winio.c:
  get_accepted_kbinput()
	- Don't use "kbinput = wgetch(win)" as a switch value. (DLR)
  get_escape_seq_kbinput()
	- Add support for the escape sequences for F1-F14 whenever
	  possible (i.e, whenever a conflict doesn't occur), some
	  additional comments, and a few cosmetic cleanups. (DLR)
  get_escape_seq_abcd()
	- A resurrected version of the old abcd() function, readded in
	  order to simplify get_escape_seq_kbinput(). (DLR)
  get_page_start()
	- For consistency, tweak so that scrolling always occurs when we
	  try to move onto the "$" at the end of the line, as opposed to
	  (a) when we move onto the "$" at the end of the line on the
	  first page and (b) when we move onto the character just before
	  the "$" on subsequent pages. (DLR)
  do_credits()
	- Use nanosleep() instead of usleep().  The latter is only
	  standard under BSD, whereas the former is POSIX compliant.
	  (DLR)
	- Add explanatory comment. (DLR)
- README:
	- Reformat to 72 characters per line, fix wording in one spot,
	  and fix spacing in several spots. (DLR)

GNU nano 1.3.1 - 2004.01.09
- General:
	- Minor overhaul and abstraction of the lowest level of mouse
	  input, mostly adapted from the code in do_mouse() that handles