@@ -9,7 +9,15 @@ CVS code -
 	  NANO_NEXTLINE_KEY, and the help messages for them have been
 	  changed accordingly.  Also remove extraneous references to
 	  NANO_DOWN_KEY in the search history shortcut entries. (DLR)
+- files.c:
+  write_marked()
+	- New function used to write the current marked selection to a
+	  file, split out from do_writeout(). (DLR)
 - nano.c:
+  do_spell(), do_int_speller(), do_alt_speller()
+	- Modify to write only the current selection from a file to the
+	  temporary file used for spell checking when the mark is on,
+	  and add a few miscellaneous cosmetic cleanups. (DLR)
   main()
 	- Move the call to raw() on systems that don't define
 	  _POSIX_VDISABLE outside the main input/output loop, as it
